--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class="section__btn">
+                        <button class="section__end">Watch How it works</button>
+                    </div>
                 </section>
+                
             </main>
         </div>
     </body>
