end second section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,43 @@
                         <button class="section__end">Watch How it works</button>
                     </div>
                 </section>
-                
+                <section class="second-section">
+                    <h2>Staff picks</h2>
+                     <div class="card__holder">
+                        <div class="photo">
+                            <div class="photo__text">
+                                <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk</p>
+                            </div>
+                            <img src="image/image-hover1.jpg" alt="Staff picks">
+                            <h3>Maple Quinoa Porrige</h3>
+                            <button>Choose</button>
+                        </div>
+                        <div class="photo">
+                            <div class="photo__text">
+                                <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk</p>
+                            </div>
+                            <img src="image/image-hover2.jpg" alt="Staff picks">
+                            <h3>Maple Quinoa Porrige</h3>
+                            <button>Choose</button>                        
+                        </div>
+                        <div class="photo">
+                            <div class="photo__text">
+                                <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk</p>
+                            </div>
+                            <img src="image/image-hover3.jpg" alt="Staff picks">
+                            <h3>Maple Quinoa Porrige</h3>
+                            <button>Choose</button>
+                        </div>
+                        <div class="photo">
+                            <div class="photo__text">
+                                <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk</p>
+                            </div>
+                            <img src="image/image-hover4.jpg" alt="Staff picks">
+                            <h3>Maple Quinoa Porrige</h3>
+                            <button>Choose</button>
+                        </div>
+                     </div>
+                </section>
             </main>
         </div>
     </body>
