--- a/index.html
+++ b/index.html
@@ -66,40 +66,44 @@
                 </section>
                 <section class="second-section">
                     <h2>Staff picks</h2>
-                     <div class="card__holder">
-                        <div class="photo">
-                            <div class="photo__text">
-                                <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk</p>
+                    <div class="card__holder">
+                        <div class="card">
+                            <div class="card__photo card1">
+                                <div class="card__text">
+                                    <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk </p>
+                                </div>
                             </div>
-                            <img src="image/image-hover1.jpg" alt="Staff picks">
-                            <h3>Maple Quinoa Porrige</h3>
-                            <button>Choose</button>
+                            <h3 class="card__title">Maple Quinoa Porrige</h3>
+                            <button class="card__btn">choose</button>
                         </div>
-                        <div class="photo">
-                            <div class="photo__text">
-                                <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk</p>
+                        <div class="card">
+                            <div class="card__photo card2">
+                                <div class="card__text">
+                                    <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk </p>
+                                </div>
                             </div>
-                            <img src="image/image-hover2.jpg" alt="Staff picks">
-                            <h3>Maple Quinoa Porrige</h3>
-                            <button>Choose</button>                        
+                            <h3 class="card__title">Maple Quinoa Porrige</h3>
+                            <button class="card__btn">choose</button>
                         </div>
-                        <div class="photo">
-                            <div class="photo__text">
-                                <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk</p>
+                        <div class="card">
+                            <div class="card__photo card3">
+                                <div class="card__text">
+                                    <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk </p>
+                                </div>
                             </div>
-                            <img src="image/image-hover3.jpg" alt="Staff picks">
-                            <h3>Maple Quinoa Porrige</h3>
-                            <button>Choose</button>
+                            <h3 class="card__title">Maple Quinoa Porrige</h3>
+                            <button class="card__btn">choose</button>
                         </div>
-                        <div class="photo">
-                            <div class="photo__text">
-                                <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk</p>
+                        <div class="card">
+                            <div class="card__photo card4">
+                                <div class="card__text">
+                                    <p>Quinoa, Grapeseed Oil, Almond Meal, Apples, Pea Protein, Cocount milk </p>
+                                </div>
                             </div>
-                            <img src="image/image-hover4.jpg" alt="Staff picks">
-                            <h3>Maple Quinoa Porrige</h3>
-                            <button>Choose</button>
+                            <h3 class="card__title">Maple Quinoa Porrige</h3>
+                            <button class="card__btn">choose</button>                            
                         </div>
-                     </div>
+                    </div>
                 </section>
             </main>
         </div>
