добавлен alt в logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body> 
         <div class="conteiner">
             <header class="header">
-                <a href="#"><img class="header__logo" src="image/logo.png"></a>
+                <a href="#"><img class="header__logo" src="image/logo.png" alt="Samba Foods"></a>
                 <nav class="header__nav">
                     <a href="#">Home</a>
                     <a href="#">About us</a>
