--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <div class="section__description">
                                 <h2 class="section__title">Choose Your Meals</h2>
                                 <p class="section__post">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                                <button class="section__button">View meal plans</button>
+                                <button class="section__button button">View meal plans</button>
                             </div>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                             <div class="section__description">
                                 <h2 class="section__title">Pickup at a Location Near You</h2>
                                 <p class="section__post">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                                <button class="section__button">Choose your Location</button>
+                                <button class="section__button button">Choose your Location</button>
                             </div>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                             <div class="section__description">
                                 <h2 class="section__title">Heat, Eat, and Enjoy</h2>
                                 <p class="section__post">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                                <button class="section__button">Get Started</button>
+                                <button class="section__button button">Get Started</button>
                             </div>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                                 </div>
                             </div>
                             <h3 class="card__title">Maple Quinoa Porrige</h3>
-                            <button class="card__btn">choose</button>
+                            <button class="card__btn button">choose</button>
                         </div>
                         <div class="card">
                             <div class="card__photo card2">
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                             <h3 class="card__title">Maple Quinoa Porrige</h3>
-                            <button class="card__btn">choose</button>
+                            <button class="card__btn button">choose</button>
                         </div>
                         <div class="card">
                             <div class="card__photo card3">
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                             <h3 class="card__title">Maple Quinoa Porrige</h3>
-                            <button class="card__btn">choose</button>
+                            <button class="card__btn button">choose</button>
                         </div>
                         <div class="card">
                             <div class="card__photo card4">
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
                             <h3 class="card__title">Maple Quinoa Porrige</h3>
-                            <button class="card__btn">choose</button>                            
+                            <button class="card__btn button">choose</button>                            
                         </div>
                     </div>
                 </section>
